--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- Secciones enmarcadas con bordes estilo pixel -->
                 <section class="pixel-border">
                     <h1>HUMANIDAD RESTAURADA</h1>
-                    <p>Has llegado a un refugio seguro. Descansa aquí antes de continuar tu viaje por la webmastery.</p>
+                    <p>Has llegado a un refugio seguro. Descansa aquí antes de continuar tu viaje por la web indie.</p>
                 </section>
 
                 <section class="pixel-border">
@@ -67,9 +67,6 @@
 
                 <!-- Sección de "En Construcción" con estética Geocities -->
                 <section class="pixel-border construction">
-                    <img src="https://web.archive.org/web/20090829051759im_/http://geocities.com/Heartland/Plains/1435/undercon.gif"
-                        alt="Under Construction">
-                    <!-- La clase "blink" hace que el texto parpadee (definido en CSS) -->
                     <p class="blink">PÁGINA EN CONSTRUCCIÓN - NO TE PIERDAS</p>
                 </section>
             </main>
@@ -87,7 +84,7 @@
     </div>
 
     <!-- Script de JavaScript para el contador de visitas persistente -->
-    <script src="counter.js"></script>
+    <script src="scripts/counter.js"></script>
 </body>
 
 </html>
