--- a/pages/libro.html
+++ b/pages/libro.html
@@ -100,8 +100,8 @@
     </div>
 
     <!-- Scripts unificados -->
-    <script src="../counter.js"></script>
-    <script src="guestbook.js"></script>
+    <script src="../scripts/counter.js"></script>
+    <script src="../scripts/guestbook.js"></script>
 </body>
 
 </html>
