--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -66,7 +66,7 @@
         </footer>
     </div>
 
-    <script src="../counter.js"></script>
+    <script src="../scripts/counter.js"></script>
 </body>
 
 </html>
