--- a/pages/lore.html
+++ b/pages/lore.html
@@ -70,7 +70,7 @@
     </div>
 
     <!-- Script del contador (subiendo un nivel) -->
-    <script src="../counter.js"></script>
+    <script src="../scripts/counter.js"></script>
 </body>
 
 </html>
