Update Lore section with personalized undead narrative

--- a/pages/lore.html
+++ b/pages/lore.html
@@ -43,18 +43,22 @@
 
             <main id="content">
                 <section class="pixel-border">
-                    <h1>EL LORE DE LORDRAN</h1>
-                    <p>Lordran es la tierra de los antiguos señores. Tras el descubrimiento de la Primera Llama, cuatro
-                        seres encontraron las Almas de los Señores dentro de ella.</p>
+                    <h1>CRÓNICAS DEL NO MUERTO</h1>
+                    <p>En un rincón olvidado de Lordran, una chispa insiste en no apagarse: la de alguien que transforma
+                        dudas en código y pantallas en pequeñas hogueras.</p>
+                    <p>Sin revelar su nombre verdadero, este No Muerto eligió el camino difícil: aprender, iterar y
+                        levantarse tras cada derrota, como manda la tradición souls.</p>
+                    <p>Este santuario digital no presume coronas ni trofeos. Aquí se guardan fragmentos de viaje,
+                        aprendizajes y cicatrices de batalla convertidas en experiencia.</p>
                 </section>
 
                 <section class="pixel-border">
-                    <h2 class="dark-souls-title">Los Cuatro Señores</h2>
+                    <h2 class="dark-souls-title">HITOS DEL PEREGRINO</h2>
                     <ul>
-                        <li>Gwyn, el Señor de la Luz Solar</li>
-                        <li>Nito, el Primero de los Muertos</li>
-                        <li>La Bruja de Izalith</li>
-                        <li>El Furtivo Pigmeo</li>
+                        <li>Forja proyectos con estética retro, entre nostalgia web y espíritu oscuro.</li>
+                        <li>Convierte cada error en una run más, más limpia y más sólida que la anterior.</li>
+                        <li>Defiende el minimalismo útil: mostrar lo justo, sin ruido ni humo.</li>
+                        <li>Avanza por curiosidad constante: aprender hoy para crear mejor mañana.</li>
                     </ul>
                 </section>
             </main>
