Expand home About Me copy with retro-souls tone

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
 
                 <section class="pixel-border">
                     <h2 class="dark-souls-title">Acerca de Mí</h2>
-                    <p>Soy Miguel Angel, un No Muerto Elegido explorando los límites del código y el diseño retro. Me
-                        encantan los videojuegos, los videos de lore y las hamburguesas.</p>
+                    <p>Soy Miguel Angel, un No Muerto Elegido que avanza entre píxeles, estética retro y ganas de crear
+                        cosas con alma propia. Me mueven los videojuegos, el lore y esa mezcla entre nostalgia dosmilera
+                        y experimentación web. Este rincón nace de la curiosidad: aprender, probar, fallar y volver a la
+                        hoguera con una versión mejor del proyecto.</p>
                 </section>
 
                 <!-- Sección de "En Construcción" con estética Geocities -->
