--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p>Soy Miguel Angel, un No Muerto Elegido que avanza entre píxeles, estética retro y ganas de crear
                         cosas con alma propia. Me mueven los videojuegos, el lore y esa mezcla entre nostalgia dosmilera
                         y experimentación web. Este rincón nace de la curiosidad: aprender, probar, fallar y volver a la
-                        hoguera con una versión mejor del proyecto.</p>
+                        hoguera con una versión mejor de mí mismo.</p>
                 </section>
 
                 <!-- Sección de "En Construcción" con estética Geocities -->
