updates del equipo

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -43,15 +43,15 @@
                 <section class="pixel-border">
                     <h1>MI EQUIPO</h1>
                     <p>Aquí se muestran las herramientas y proyectos en los que estoy trabajando en este viaje por la
-                        Webmastery.</p>
+                        web indie.</p>
                 </section>
 
                 <section class="pixel-border">
                     <h2 class="dark-souls-title">Inventario</h2>
                     <ul>
-                        <li><strong>Arma:</strong> Visual Studio Code</li>
+                        <li><strong>Arma:</strong> Antigravity/Visual Studio Code</li>
                         <li><strong>Armadura:</strong> GitHub Repository</li>
-                        <li><strong>Anillo:</strong> Stack Overflow Legend</li>
+                        <li><strong>Anillo:</strong> Voluntad del No Muerto (Persistencia)</li>
                     </ul>
                 </section>
             </main>
