--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>YOU DIED | Portfolio Retro</title>
+    <title>Won't go Hollow</title>
     <!-- Enlace a la hoja de estilos externa -->
     <link rel="stylesheet" href="style.css">
 
