--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="pages/lore.html">LORE</a></li>
                     <li><a href="pages/equipo.html">EQUIPO</a></li>
+                    <li><a href="pages/blog.html">BITÁCORA</a></li>
                     <li><a href="pages/libro.html">LIBRO DE VISITAS</a></li>
                 </ul>
 
@@ -65,6 +66,14 @@
                         cosas con alma propia. Me mueven los videojuegos, el lore y esa mezcla entre nostalgia dosmilera
                         y experimentación web. Este rincón nace de la curiosidad: aprender, probar, fallar y volver a la
                         hoguera con una versión mejor de mí mismo.</p>
+                </section>
+
+
+
+                <section class="pixel-border">
+                    <h2 class="dark-souls-title">Nueva Bitácora</h2>
+                    <p>He abierto una sección de blog para compartir ideas, avances y aprendizajes con formato retro.
+                        Entra en <a href="pages/blog.html">BITÁCORA DEL NO MUERTO</a> para ver la estructura base y empezar a publicar.</p>
                 </section>
 
                 <!-- Sección de "En Construcción" con estética Geocities -->
