--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -26,6 +26,7 @@
                     <li><a href="../index.html">INICIO</a></li>
                     <li><a href="lore.html">LORE</a></li>
                     <li><a href="equipo.html">EQUIPO</a></li>
+                    <li><a href="blog.html">BITÁCORA</a></li>
                     <li><a href="libro.html">LIBRO DE VISITAS</a></li>
                 </ul>
 
