just to update neocities

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="pages/lore.html">LORE</a></li>
                     <li><a href="pages/equipo.html">EQUIPO</a></li>
-                    <li><a href="pages/blog.html">BITÁCORA</a></li>
+                    <!-- <li><a href="pages/blog.html">BITÁCORA</a></li> -->
                     <li><a href="pages/libro.html">LIBRO DE VISITAS</a></li>
                 </ul>
 
@@ -70,11 +70,11 @@
 
 
 
-                <section class="pixel-border">
+                <!-- <section class="pixel-border">
                     <h2 class="dark-souls-title">Nueva Bitácora</h2>
                     <p>He abierto una sección de blog para compartir ideas, avances y aprendizajes con formato retro.
                         Entra en <a href="pages/blog.html">BITÁCORA DEL NO MUERTO</a> para ver la estructura base y empezar a publicar.</p>
-                </section>
+                </section> -->
 
                 <!-- Sección de "En Construcción" con estética Geocities -->
                 <section class="pixel-border construction">
