--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,7 +15,8 @@
 <body>
     <div id="container">
         <header>
-            <marquee scrollamount="5">*** NUEVA BITÁCORA ACTIVADA *** DEJA REGISTRO DE TUS RUNS *** CADA POST ES UNA HOGUERA ***</marquee>
+            <marquee scrollamount="5">*** NUEVA BITÁCORA ACTIVADA *** DEJA REGISTRO DE TUS RUNS *** CADA POST ES UNA
+                HOGUERA ***</marquee>
         </header>
 
         <div id="wrapper">
@@ -42,52 +43,23 @@
             <main id="content">
                 <section class="pixel-border">
                     <h1>BITÁCORA DEL NO MUERTO</h1>
-                    <p>Un diario personal con alma retro: pequeñas crónicas sobre código, creatividad y aprendizaje,
-                        escrito como en los blogs de los 2000 pero con tono de Dark Souls.</p>
+                    <p>Un diario personal con alma retro: crónicas sobre código, perseverancia ante los bugs y el camino
+                        del No Muerto en la web indie.</p>
                 </section>
 
                 <section class="pixel-border">
-                    <h2 class="dark-souls-title">Tema central recomendado</h2>
-                    <p><strong>"Crónicas de Hogueras Digitales"</strong>: cada entrada es una hoguera en el camino.
-                        Habla de lo que descubriste, lo que salió mal, cómo lo resolviste y qué te llevas a la
-                        siguiente run.</p>
+                    <h2 class="dark-souls-title">Índice de Publicaciones</h2>
+                    <p>Cada entrada es una hoguera en el camino. Haz clic para leer las crónicas.</p>
                     <ul>
-                        <li><strong>Tono:</strong> íntimo, melancólico y honesto.</li>
-                        <li><strong>Foco:</strong> progreso real en proyectos, sin postureo.</li>
-                        <li><strong>Objetivo:</strong> que quien lea sienta que avanza contigo.</li>
+                        <li><a href="run_01.html">Run #01: Encender la primera hoguera del blog</a></li>
+                        <li><a href="#">Run #02: El día que casi me volví hueco... o no (Próximamente)</a></li>
                     </ul>
                 </section>
 
                 <section class="pixel-border">
-                    <h2 class="dark-souls-title">Estructura de la sección</h2>
-                    <ul>
-                        <li><strong>Portada del blog (esta página):</strong> manifiesto, índice y enlaces a posts.</li>
-                        <li><strong>Archivo por eras:</strong> 2026, 2027, etc. (una subsección por año).</li>
-                        <li><strong>Entradas individuales:</strong> un HTML por post para mantener estilo Neocities.</li>
-                        <li><strong>Ritual fijo:</strong> terminar cada entrada con "Próxima hoguera" (siguiente paso).</li>
-                    </ul>
-                </section>
-
-                <section class="pixel-border">
-                    <h2 class="dark-souls-title">Plantilla sugerida para cada post</h2>
-                    <ul>
-                        <li><strong>Título:</strong> [Nº de run] + tema (ej. "Run #04: Derrotando al Bug Fantasma").</li>
-                        <li><strong>Fecha + estado:</strong> "11/03/2026 · Humanidad estable".</li>
-                        <li><strong>Contexto:</strong> qué estabas intentando construir.</li>
-                        <li><strong>Boss de hoy:</strong> el problema principal.</li>
-                        <li><strong>Loot obtenido:</strong> aprendizajes o recursos útiles.</li>
-                        <li><strong>Próxima hoguera:</strong> qué harás en la siguiente entrada.</li>
-                    </ul>
-                </section>
-
-                <section class="pixel-border">
-                    <h2 class="dark-souls-title">Índice inicial de publicaciones</h2>
-                    <p>Empieza con pocas entradas cortas y constantes (1 por semana) para crear hábito.</p>
-                    <ul>
-                        <li><a href="#">Run #01: Encender la primera hoguera del blog</a></li>
-                        <li><a href="#">Run #02: El día que casi me fui Hollow por CSS</a></li>
-                        <li><a href="#">Run #03: Cómo mantengo viva la estética 2000 sin romper UX</a></li>
-                    </ul>
+                    <h2 class="dark-souls-title">Sobre la Bitácora</h2>
+                    <p>Este espacio sigue la filosofía de las "Hogueras Digitales": documentar el progreso real, los
+                        fracasos y los aprendizajes, lejos del ruido de las redes sociales modernas.</p>
                 </section>
             </main>
         </div>
