--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
                 <section class="pixel-border">
                     <h2 class="dark-souls-title">Nueva Bitácora</h2>
                     <p>He abierto una sección de blog para compartir ideas, avances y aprendizajes con formato retro.
-                        Entra en <a href="pages/blog.html">BITÁCORA DEL NO MUERTO</a> para ver la estructura base y empezar a publicar.</p>
+                        Entra en <a href="pages/blog.html">BITÁCORA DEL NO MUERTO</a> para ver la estructura base y
+                        esperar mis publicaciones.</p>
                 </section>
 
                 <!-- Sección de "En Construcción" con estética Geocities -->
                 <section class="pixel-border construction">
-                    <p class="blink">PÁGINA EN CONSTRUCCIÓN - NO TE PIERDAS</p>
+                    <p class="blink">PÁGINA EN CONSTRUCCIÓN - NO TE LO PIERDAS</p>
                 </section>
             </main>
         </div>
