--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
         <header>
-            <marquee scrollamount="5">*** NUEVA BITÁCORA ACTIVADA *** DEJA REGISTRO DE TUS RUNS *** CADA POST ES UNA
+            <marquee scrollamount="5">*** NUEVA BITÁCORA ACTIVADA *** DEJO REGISTRO DE MIS RUNS *** CADA POST ES UNA
                 HOGUERA ***</marquee>
         </header>
 
@@ -52,7 +52,8 @@
                     <p>Cada entrada es una hoguera en el camino. Haz clic para leer las crónicas.</p>
                     <ul>
                         <li><a href="run_01.html">Run #01: Encender la primera hoguera del blog</a></li>
-                        <li><a href="#">Run #02: El día que casi me volví hueco... o no (Próximamente)</a></li>
+                        <li><a href="run_02.html">Run #02: El día que casi me volví hueco... o no</a>
+                        </li>
                     </ul>
                 </section>
 
