--- a/pages/libro.html
+++ b/pages/libro.html
@@ -76,9 +76,9 @@
                     <h1>LIBRO DE VISITAS</h1>
                     <p>Deja una marca antes de seguir adelante. Tu mensaje perdurará en la hoguera.</p>
 
-                    <div class="guestbook-container" style="margin-top: 20px;">
+                    <div class="guestbook-container">
                         <iframe src="https://rioldarz.atabook.org/" width="100%" height="500" frameborder="0"
-                            style="background: #000; border: 2px inset var(--ds-border);"></iframe>
+                            class="guestbook-iframe"></iframe>
                     </div>
                 </section>
             </main>
